--- a/blue.html
+++ b/blue.html
@@ -16,7 +16,7 @@
         <div class="kotak tulis">
             <h3>Equilibrium #3456</h3>
             <p>Our equilibrium collection promotes
-            <br>balance and code</p>
+            <br>balance and code niko alfin</p>
             <div><P style="color: aqua;">0.041ETH</P><P>3 day left</P></div>
             <hr>
 
